--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
+  "name": "cl-openrouter-monitor",
+  "version": "1.0.0",
+  "main": "monitor.js",
+  "scripts": {
+    "start": "node monitor.js"
+  },
   "dependencies": {
-    "node-fetch": "^2.7.0",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-fetch": "^2.6.7",
+    "node-telegram-bot-api": "^0.61.0"
   }
 }
